# prosto_pay_test_task

./: .dockerignore  .env.sample  .flake8  .mypy.ini  Dockerfile  Makefile  README.md  coverage-export.sh  coverage-report.sh  coverage-test.sh  coverage.sh  dc.sh  docker-compose.yaml  downgrade-db.sh  entrypoint.sh  gunicorn.conf.py  makemigrations.sh  migrate-db.sh  pyproject.toml  run-pytest.sh  server.py
alembic/: env.py
alembic/versions/: 5a3465d8a09b_first_migration.py
core/: __init__.py
core/base/: __init__.py  dependencies.py  error_messages.py  exceptions.py  hashtable.py  models.py  router.py  schemas.py  service.py
core/conf/: app.py  db.py  exception_handlers.py  logging.py  middlewares.py  routers.py  schemas.py  settings.py
core/tests/: conftest.py
core/tests/base/: test_hashtable.py  test_ping.py
core/tests/users/: factories.py  test_create_user.py
core/users/: __init__.py  auth.py  dependencies.py  models.py  router.py  schemas.py  service.py
scripts/postgres/: create-app-user.sh
